Added: new dropdown on header containing account links

--- a/Views/Home/Mainpage.cshtml
+++ b/Views/Home/Mainpage.cshtml
@@ -2,7 +2,9 @@
 @using WebApp1.Mainpage
 @model WebApp1.Mainpage.Mainpage;
 
-@{       
+@{
+    ViewData["Title"] = "Producten pagina";
+
     // The code below is used to populate the product page
     // The product page itself consists of 3 columns
     // We must first sort all the products into each column    
