--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -8,10 +8,7 @@
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-            </li>
-            <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link">Uitloggen</button>
             </li>
         </ul>
     </form>
@@ -19,7 +16,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right" id="accountLinks">
-        <li id="registerLink"><a asp-area="Identity" asp-page="/Account/Register">Register</a></li>
-        <li id="registerLink"><a asp-area="Identity" asp-page="/Account/Login">Login</a></li>
+        <li id="registerLink"><a asp-area="Identity" asp-page="/Account/Register">Registreren</a></li>
+        <li id="registerLink"><a asp-area="Identity" asp-page="/Account/Login">Inloggen</a></li>
     </ul>
 }
