--- a/Views/EditProduct/Index.cshtml
+++ b/Views/EditProduct/Index.cshtml
@@ -1,7 +1,6 @@
 @using Org.BouncyCastle.Asn1.Cms
 @using WebApp1.Models
-@using WebApp1.Products
-@model WebApp1.Products.Productwaarde
+@model WebApp1.Models.Productwaarde
 @{
     ViewData["Title"] = "Product Bewerken";                                
     Productwaarde product = ViewBag.EditProduct;
