--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@using WebApp1.Models
-@using WebApp1.Products
-@model IEnumerable<WebApp1.Products.Productwaarde>
+@model IEnumerable<WebApp1.Models.Productwaarde>
 @{
     ViewData["Title"] = "Home Page";
     List<Productwaarde> products = Model.ToList();
