--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<WebApp1.Products.Productsoort>
+@model IEnumerable<WebApp1.Models.Productsoort>
 
 @{
     ViewData["Title"] = "Index";
