--- a/Views/UploadFiles/Create4.cshtml
+++ b/Views/UploadFiles/Create4.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<WebApp1.Products.Productwaarde>
+@model IEnumerable<WebApp1.Models.Productwaarde>
 @using Microsoft.AspNetCore.Http
 @{
     Layout = "";
