--- a/Views/Home/Search.cshtml
+++ b/Views/Home/Search.cshtml
@@ -1,6 +1,5 @@
 @using WebApp1.Models
-@using WebApp1.Products
-@model IEnumerable<WebApp1.Products.Productwaarde>
+@model IEnumerable<WebApp1.Models.Productwaarde>
 @{
     int currentColumn = 0;
     List<Productwaarde> col2Items = new List<Productwaarde>();
