--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -1,4 +1,4 @@
-@model WebApp1.Products.Productsoort
+@model WebApp1.Models.Productsoort
 <link rel="stylesheet" href="~/css/product_creation_generic.css">
  <script type='text/javascript'>
 	var i=0;
