--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,7 +1,14 @@
-﻿@{
+﻿
+
+@{
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+
+
+<link rel="stylesheet" href="~/css/product_creation_generic.css">
+<div class="pageRoot">
+    <div >
+        <p>Use this area to provide additional information.</p>
+    </div>
+</div>
