--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/layout.css">
     <title>@("Webshop - " + ViewData["Title"])</title>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Webshop</a>
+    <a class="navbar-brand" href="#"><img id="websitelogo" src="~/images/boatlogo.png" alt="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,7 +22,10 @@
             <a class="nav-link" href="@Url.Action("Index", "Home")">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="@Url.Action("Mainpage", "Home")">Producten <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="@Url.Action("About", "Home")">About <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="@Url.Action("Mainpage", "About")">Producten <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
             @if (User.IsInRole("Admin"))
@@ -64,6 +68,34 @@
   </div>
 </nav>
 <br>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="@Url.Action("About", "")">Motorboten</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="@Url.Action("About", "")">Zeilboten</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="@Url.Action("About", "")">Sportboten</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="@Url.Action("About", "")">Accesoires</a>
+      </li>
+
+    </ul>
+</nav>
 </head>
 
 <body>
