Added menu buttons to account detail page. Interactive image works with more than 10 items now.

--- a/Areas/Identity/Pages/_ViewStart.cshtml
+++ b/Areas/Identity/Pages/_ViewStart.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     Layout = "/Views/Shared/_Layout.cshtml";
+
 }
 
 <style>
@@ -21,7 +22,7 @@
         margin-left: 10%;
         margin-right: 10%;
     }
-    
+
     div.row {
         background-color: #ffffff;
         border-radius: 3px;
@@ -32,4 +33,94 @@
         margin-bottom: 10%;
         margin-top: 20px;
     }
+
+#profile{
+    color: black;
+    padding: 10px;
+    padding-right: 78.5px;
+    padding-left: 78.5px;
+    text-align: center;
+    background-color: #ffffff;
+    border-radius: 3px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: 0%;
+    margin-bottom: 5%;
+            
+    }
+
+#change-password{
+    color: black;
+    padding: 10px;
+    padding-right: 68px;
+    padding-left: 68px;
+    text-align: center;
+    background-color: #ffffff;
+    border-radius: 3px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: 0%;
+    margin-bottom: 5%;
+            
+    }
+#two-factor{
+    color: black;
+    padding: 10px;
+    text-align: center;
+    background-color: #ffffff;
+    border-radius: 3px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: 0%;
+    margin-bottom: 5%;
+}
+
+#personal-data{
+    color: black;
+    padding: 10px;
+    background-color: #ffffff;
+    padding-right: 54.5px;
+    padding-left: 54.5px;
+    text-align: center;
+    border-radius: 3px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: 0%;
+    margin-bottom: 5%;
+}
+
+li{
+    padding: 10px;  
+}
+
+h5{
+    padding-left: 10%;
+}
+
+#enable-authenticator{
+    padding-left: 10%;
+}
+
+
+
+#profile:hover{
+    box-shadow: 0 4px 8px 0 rgba(255,165,0, 0.2), 0 6px 20px 0 rgba(255,165,0, 0.5);
+    transition: 0.3s;       
+}
+
+#change-password:hover{
+    box-shadow: 0 4px 8px 0 rgba(255,165,0, 0.2), 0 6px 20px 0 rgba(255,165,0, 0.5);
+    transition: 0.3s;     
+}
+
+#two-factor:hover{
+    box-shadow: 0 4px 8px 0 rgba(255,165,0, 0.2), 0 6px 20px 0 rgba(255,165,0, 0.5);
+    transition: 0.3s;
+}
+
+#personal-data:hover{
+    box-shadow: 0 4px 8px 0 rgba(255,165,0, 0.2), 0 6px 20px 0 rgba(255,165,0, 0.5);
+    transition: 0.3s;
+}
+
+a:hover{
+    text-decoration: none;
+}
+
 </style>
