--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -229,9 +229,9 @@
 
   count = 0;
 
-  for(var i=0; i<container.length+1; i++) {
+  for(var i=0; i<10; i++) {
 
-    if (imgs[i]!=null && text[i]!=null){
+    if (imgs[i]!=null && text[i]!=null ){
 
       var a = document.createElement('a');
       a.href = "https://localhost:5001/ViewProduct?id="+(i+1).toString();
