fix: product prijs is een korting prijs als er een korting is

--- a/Views/Account/Manage/Index.cshtml
+++ b/Views/Account/Manage/Index.cshtml
@@ -1,7 +1,7 @@
 @page
 @model IndexModel
 @{
-    ViewData["Title"] = "Profile";
+    ViewData["Title"] = "2";
 }
 
 <h4>@ViewData["Title"]</h4>
@@ -26,7 +26,7 @@
                 else
                 {
                     <input asp-for="Input.Email" class="form-control" />
-                    <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">Send verification email</button>
+                    <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">Send verification email 2</button>
                 }
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
