--- a/Views/Cart/pay.cshtml
+++ b/Views/Cart/pay.cshtml
@@ -11,5 +11,7 @@
         </strong>
     </center>
     <br>
-    <a asp-controller="Home" asp-action="index">Home</a>
+    <form  method="get">
+     <input type="submit" class="btn btn-primary"  value="Home" asp-controller="Home" asp-action="index">
+</form>
 </div>
