--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -64,8 +64,8 @@
     </ul>
     <partial name="_LoginPartial" />
 
-   <form class="form-inline my-2 my-lg-0" asp-action="Searching">
-      <input class="form-control mr-sm-2" type="search" name= "searchstring" placeholder="Zoeken..." aria-label="Search">
+   <form class="form-inline my-2 my-lg-0" asp-action="Search" asp-controller="Category">
+      <input class="form-control mr-sm-2" type="search" name= "search" placeholder="Zoeken..." aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Zoek</button>
     </form>
   </div>
